--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,26 @@
-name: DevSecOps Pipeline - DefectDojo Ready
+name: Advanced DevSecOps Pipeline
 on:
   push:
     branches: ["main"]
   workflow_dispatch:
 jobs:
-  security-scan:
+  security-guard:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Run Trivy vulnerability scanner
+      - name: 🛑 Secret Scanning (Trivy)
+        uses: aquasecurity/trivy-action@0.24.0
+        with:
+          scan-type: "fs"
+          scan-ref: "."
+          format: "table"
+          exit-code: "1"
+          vuln-type: "os,library"
+          scanners: "secret"
+          severity: "CRITICAL,HIGH"
+      - name: 🐳 Build & Scan Docker Image
+        if: success()
         uses: aquasecurity/trivy-action@0.24.0
         with:
           image-ref: "bkimminich/juice-shop:latest"
@@ -19,18 +29,22 @@ jobs:
           vuln-type: "os,library"
           severity: "CRITICAL,HIGH"
           exit-code: "0"
-      - name: Start Juice Shop Container
+      - name: 🚀 Start App Container
+        if: success()
         run: |
           docker run --rm -d -p 3007:3000 --name juice-shop bkimminich/juice-shop:latest
-          echo "Đang đợi ứng dụng khởi động..."
+          echo "Waiting for app to start..."
           sleep 30
-      - name: ZAP Baseline Scan
+
+      - name: ⚡ DAST Scan (OWASP ZAP)
+        if: success()
         uses: zaproxy/action-baseline@v0.13.0
         with:
           target: "http://localhost:3007"
           cmd_options: "-x zap-report.xml"
           allow_issue_writing: false
-      - name: Upload Security Reports
+
+      - name: 📂 Upload Reports
         if: always()
         uses: actions/upload-artifact@v4
         with:
@@ -38,3 +52,12 @@ jobs:
           path: |
             trivy-report.json
             zap-report.xml
+      - name: 🔔 Discord Notification
+        if: always()
+        uses: nobrayner/discord-webhook@v1
+        with:
+          github-token: ${{ secrets.github_token }}
+          webhooks-url: ${{ secrets.DISCORD_WEBHOOK }}
+          username: "DevSecOps Bot"
+          avatar-url: "https://cdn-icons-png.flaticon.com/512/2092/2092663.png"
+          description: "🔒 Security Scan Status: ${{ job.status }}! \nCheck GitHub Actions for details."
