--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
           cmd_options: "-x zap-report.xml"
           allow_issue_writing: false
           artifact_name: "zap-scan-logs"
-      - name: 📂 Upload Reports
+      - name: 📂 Upload Reportss
         if: always()
         uses: actions/upload-artifact@v4
         with:
