--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   security-guard:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -37,13 +38,15 @@ jobs:
           sleep 30
       - name: ⚡ DAST Scan (OWASP ZAP)
         if: success()
-        uses: zaproxy/action-baseline@v0.13.0
-        with:
-          target: "http://localhost:3000"
-          cmd_options: "-x zap-report.xml"
-          allow_issue_writing: false
-          artifact_name: "zap-scan-logs"
-      - name: 📂 Upload Reportss
+        run: |
+          # Cấp quyền ghi file cho thư mục hiện tại
+          chmod 777 $(pwd)
+          # Chạy Docker ZAP, mount thư mục hiện tại vào để lấy báo cáo
+          docker run --network host -v $(pwd):/zap/wrk/:rw -t zaproxy/zap-stable zap-baseline.py \
+          -t http://localhost:3000 \
+          -x zap-report.xml \
+          -I # (Tùy chọn) -I nghĩa là bỏ qua lỗi cảnh báo, nếu muốn pipeline đỏ khi có lỗi thì bỏ -I đi
+      - name: 📂 Upload Reports
         if: always()
         uses: actions/upload-artifact@v4
         with:
