--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=super_secret_password_123 
-AWS_ACCESS_KEY_ID=AKIAIOSFODNN7EXAMPLE
+DB_PASSWORD=Password123!
+AWS_ACCESS_KEY_ID=AKIAIMFAKEKEYTEST123
+AWS_SECRET_ACCESS_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
