--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DB_PASSWORD=StrongPass!987
-AWS_ACCESS_KEY_ID=AKIAZEXAMPLEKEY999999
-AWS_SECRET_ACCESS_KEY=7dLr5pQtnFEMI/XY1NPMG/hTtQfiCYFAKESECRETKEY
+DB_PASSWORD=Password123!
+AWS_ACCESS_KEY_ID=AKIAIMFAKEKEYTEST123
+AWS_SECRET_ACCESS_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
