--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
           scan-ref: "."
           format: "table"
           exit-code: "1"
-          vuln-type: "os,library"
+          # vuln-type: "os,library"
           scanners: "secret"
           secret-severities: "CRITICAL,HIGH,MEDIUM"
       - name: 🐳 Build & Scan Docker Image
@@ -29,7 +29,7 @@ jobs:
           output: "trivy-report.json"
           vuln-type: "os,library"
           severity: "CRITICAL,HIGH"
-          exit-code: "0"
+          exit-code: "1"
       - name: 🚀 Start App Container
         if: success()
         run: |
